[package]
name = "furl"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["URL", "URI", "formatting"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
repository = "https://github.com/ogheorghies/furl"
homepage = "https://github.com/ogheorghies/furl"
description = "Formatter for URLs using a sprintf-like template"

[badges]
maintenance = { status = "..." }

[dependencies]
url = "2.5.8"
argh = "0.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
