[package]
name = "furl"
version = "0.2.1"
edition = "2024"
license = "MIT"
keywords = ["URL", "URI", "formatting", "JSON", "printf"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
repository = "https://github.com/ogheorghies/furl"
homepage = "https://github.com/ogheorghies/furl"
description = "Text (printf) and JSON formatter for URLs"

[badges]
maintenance = { status = "..." }

[dependencies]
url = "2.5.8"
argh = "0.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
